feat: add flags to config file for terminal output

--- a/config.ini
+++ b/config.ini
@@ -11,3 +11,34 @@ OUTPUT_CON_PATH = Final Contingency Files/
 ALL_INPUT_CON_FILES_PATH = ERCOT Contingency Files/ALL_DATE_RANGES
 
 [FLAGS]
+; Show the name and number of contingencies found while scraping from input files .
+; Default: True
+SHOW_INPUT_FILE_PROCESSING = True
+
+; Show a summary of the loaded contingencies.
+; Default: True
+SHOW_LOADED_CON_SUMMARY = True
+
+; Show a list of the contingency id's that show up multiple times for different
+; contingencies.
+; Default: True
+SHOW_DUP_ID_LIST = True
+
+; Show a summary of the nerc categories found in the input files.
+; Default: False
+SHOW_NERC_CAT_SUMMARY = False
+
+; Show a summary of how many duplicate lines there are split into doubles,
+; triples, quads, etc.
+; Default: True
+SHOW_DUP_LINE_COUNT_SUMMARY = True
+
+; Show the names of the generated output files and a notification that they
+; have been created.
+; Default: True
+SHOW_OUTPUT_FILE_PROGRESS = True
+
+; Wait for user input after the program is finished to close. Useful if run
+; from the file explorer instead of a command line.
+; Default: False
+WAIT_FOR_INPUT_TO_CLOSE = False
