feat: make additional contingency adding nicer and add config options

--- a/config.ini
+++ b/config.ini
@@ -10,6 +10,16 @@ OUTPUT_CON_PATH = Final Contingency Files/
 ; Contingency files can be in nested folders beneath this path.
 ALL_INPUT_CON_FILES_PATH = ERCOT Contingency Files/ALL_DATE_RANGES
 
+; The con file path for the program to scrape contingencies from and compare
+; them to the already filtered contingencies. If a contingency from the file
+; has different statements from any of the filtered contingencies, it will
+; be added to the set of filtered contingencies. Set USE_POST_FILTER_CONS to
+; False to disable this behaviour.
+POST_FILTER_CON_PATH = PEC_SINGLE_CONTINGENCIES.con
+; Enable or disable the above contingency additions.
+; Default: True
+USE_POST_FILTER_CONS = True
+
 [FLAGS]
 ; Show the name and number of contingencies found while scraping from input files .
 ; Default: True
@@ -23,6 +33,12 @@ SHOW_LOADED_CON_SUMMARY = True
 ; contingencies.
 ; Default: True
 SHOW_DUP_ID_LIST = True
+
+; Show a summary of contingencies added in the post fitler contingency addition
+; step. Has no effect if USE_POST_FILTER_CONS is False
+; Default: True
+SHOW_POST_FILTER_SUMMARY = True
+
 
 ; Show a summary of the nerc categories found in the input files.
 ; Default: False
