feat: add additional lookup table addin files

--- a/config.ini
+++ b/config.ini
@@ -20,6 +20,13 @@ POST_FILTER_CON_PATH = PEC_SINGLE_CONTINGENCIES.con
 ; Default: True
 USE_POST_FILTER_CONS = True
 
+; A con file path for the program to scrape right before creating the Excel Lookup
+; table, to then add into the table. These contingencies are not filtered for
+; the supplied bus list, nor are they checked for duplicate id's or lines/statements
+LOOKUP_TABLE_ADD_INS = Final_GVEC_Study_Contingency_List_[NERC_P1-1].con
+; Enable or disable the use of lookup table add ins
+USE_LOOKUP_TABLE_ADD_INS = True
+
 [FLAGS]
 ; Show the name and number of contingencies found while scraping from input files .
 ; Default: True
@@ -58,3 +65,6 @@ SHOW_OUTPUT_FILE_PROGRESS = True
 ; from the file explorer instead of a command line.
 ; Default: False
 WAIT_FOR_INPUT_TO_CLOSE = False
+
+; Show a summary of the contingencies added to the lookup table.
+SHOW_LKP_TBL_ADD_INS_SUMMARY = True
